# hello_langchain

./: .gitignore  1.md  README.md  main.py  prompt.md  prompt1.md  prompt2.md  prompt3.md  pyproject.toml
Trasform/: index.mjs
base/chains/: use.ipynb
base/memory/: 1_cus_history.py  2_langchain_history.py  3_langchain_modern_history.py  4_new.py
base/model_io/: chat_prompt_template.ipynb  invoke_llm.ipynb  invoke_type.ipynb  prompts.ipynb
chroma_db1/: chroma.sqlite3
langchain/messages/: message.py  prompt_message.py
langchain/middleware/: human_in_the_loop.py
langchain_note/: langchain_1x_knowledge_system.md  langchain_architecture_en.excalidraw  langchain_learning_architecture.excalidraw  langchain_learning_architecture.md  rag_pipeline.excalidraw  react_loop.excalidraw
models/: __init__.py  deepseek.py  gpt.py  models.py  qwen.py
note/: API.md  MCP.md  Retrieval.md  Tools.md  milvus.md  redis.md  v0.3&v1.md
pkg_langchain/: __init__.py  main.py
pkg_langchain/LCEL/: 1_base.py  2_Runable_Lambda.py  2_Runnable_Lambda.py  3_sequence.ipynb  4_parallel.ipynb  6_runnable_branch.py  7_runnable_with_fallback.py
pkg_langchain/a1_models/: 1_note.md  2_create_chat.ipynb  Model_IO_Prompt.md  note.md
pkg_langchain/a1_models/2_prompt/: 2_chat_prompt_template.py
pkg_langchain/a1_models/a1_model/: a1_create_model.ipynb  a2_invock.py  a3_ainvock.py  (+4 more)
pkg_langchain/a2_memory/: Memory.md  a1_in_memory_v1.py  a2_in_memory_v2.py  a3_in_memory_v3.py
pkg_langchain/a3_retrieval/: Retrieval.md
pkg_langchain/a4_chains/: Chains.md  a1_runnable_base.py  a2_runnable_lambda.py  a3_runabel_sequence.py  a4_runnable_parallel.py  a5_runnable_serializable.py  a6_runnable_branch.py  a8_runnable_passthrough.py
pkg_langchain/a5_tools/: 1_base.py  1_prictes.py  Tools.md
pkg_langchain/a7_agents/: 01_base.py  Agents.md  inspirations.md
pkg_langchain/agents/: 01_base.py
pkg_langchain/messages/: 3_system_message.py  4_output.py  6_history.py  __init__.py  h.py  n1_prompt_message.py  n2_message.py  n5_content_blocks.py
pkg_langchain/middleware/: custom_middleware.py  human_in_the_loop.py  summary.py
pkg_langchain/models/: create_chat.ipynb
pkg_langchain/streaming/: base.py
pkg_langchain/structured_output/: 1_base.py  type_responseT_example.py
pkg_langchain/tools/: 1_base.py
pkg_langgraph/: note.md
project1/: 01_RAG_project.py  03_chromadb.py  04_RAG_project.py
project1/01_document/: 01_docx_loader.py  01_pdf_loader.py  01_web_loader.py  02_txt_loader.py
project1/02_chunking/: 01_text_split.py  05_structure_chunk.py
project2/: semantic-search-indexing.py
prompt/: 2_note.md  3_note.md  4_prompt.md  prompt1.md
study/: 1_base.py  2_mini_cursor.py  3_mini_copilot.py  a1_base.py  a2_mini_cursor.py  a3_mini_copilot.py  a5_history.py  a5_history_async.py  python_exec.py
test/: 1.ipynb  ai.txt
tools/: __init__.py  all_tools.py  cus_tools.py  format copy.py  format.py  format_print.py  model.py  parse_path.py
(+54 files in other folders)
