[project]
name = "hello-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "dashscope>=1.25.11",
    "deepagents>=0.3.9",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "fastapi>=0.128.0",
    "ipympl>=0.10.0",
    "jq>=1.11.0",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "markdown>=3.10.1",
    "mcp>=1.26.0",
    "openai>=2.16.0",
    "pdfminer-six>=20260107",
    "pymilvus>=2.6.8",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "unstructured[pdf]>=0.18.31",
]

[dependency-groups]
dev = ["ruff>=0.14.7"]
